# bevy-birb

./: Cargo.toml  README.md
.cargo/: confg.toml  config.toml
src/: main.rs  setup.rs
src/components/: action_button.rs  collider.rs  gravity.rs  mod.rs  velocity.rs
src/entities/: button.rs  mod.rs  pipe.rs  player.rs
src/state/: mod.rs  on_enter_game_over.rs  on_enter_main_menu.rs  on_enter_playing.rs
src/systems/: button_system.rs  collision_system.rs  display_fps_system.rs  gravity_system.rs  lose_condition_system.rs  mod.rs  pipes_system.rs  score_system.rs  velocity_system.rs  web_request.rs
src/systems/game_over/: end_of_game_results.rs  game_over_input.rs  game_over_text.rs  mod.rs
src/systems/main_menu/: main_menu_ui.rs
src/systems/player_actions/: actions.rs  audio_playback.rs  flap.rs  game_over_input.rs  mod.rs  quit.rs  toggle_fullscreen.rs
