[package]
name = "bevy_birb"
version = "0.2.0"
edition = "2021"

[workspace]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0" }
bevy-persistent = { version = "0.5.0", features = ["bincode", "json"] }
bevy_mod_reqwest = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
